--- a/style.css
+++ b/style.css
@@ -351,7 +351,7 @@ body{
     border-radius: var(--radius);
     background: #FFF;
 }
-.job img{
+.job .job-details img:first{
     min-width: 7vw;
     aspect-ratio: 1/1;
 }
@@ -392,6 +392,19 @@ body{
     font-weight: 700;
     line-height: 114%;
     letter-spacing: 0.32px;
+    display: flex;
+    align-items: center;
+    gap: var(--gap);
+}
+.stars{
+    display: flex;
+    align-items: center;
+    gap: calc(0.3 * var(--gap));
+}
+.stars img{
+    width: var(--fontsmall) !important;
+    aspect-ratio: 1/1;
+    display: block;
 }
 .job .last{
     color: #575756;
@@ -564,9 +577,62 @@ body{
     font-weight: 700;
     letter-spacing: 0.8px;
 }
+.current-jobs{
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap);
+}
+.currentjob{
+    padding: var(--padmedium);
+    border-radius: var(--radius);
+    border: 1px solid rgba(0, 0, 0, 0.20);
+    background: #FFF;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+}
+.currentjob:hover .continuejob{
+    display: flex;
+}
+.currentjob .job-details{
+    gap: var(--gap);
+}
+.currentjob img{
+    width: 25%;
+}
+.currentjob h4{
+    font-size: var(--fontsmall) !important;
+}
+.continuejob{
+    background: rgba(172, 133, 255, 0.90);
+    letter-spacing: 0.8px;
+    font-family: 'Inter';
+    font-size: var(--fontsmall);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    color: white;
+    font-weight: 700;
+    display: none;
+}
 @media screen and (max-width: 1500px) {
     .container{
         width: 80vw;
         height: 90vh;
+    }
+    .currentjob h4{
+        font-size: var(--fontxsmall) !important;
+    }
+    .currentjob .difficulty{
+        font-size: var(--fontxsmall);
+        gap: calc(0.5 * var(--gap));
+    }
+    .currentjob .difficulty .stars{
+        gap: calc(0.2 * var(--gap));
     }
 }
