--- a/style.css
+++ b/style.css
@@ -187,11 +187,6 @@ body{
 .container nav div:nth-child(3) section p:last-child{
     color: rgba(255, 255, 255, 0.65);
 }
-.container nav div:nth-child(3) .flexlittle{
-    /* width: 2vw;
-    aspect-ratio: 1/1; */
-    /* border-radius: 9999px; */
-}
 .container nav .profile-name{
     font-size: calc(1.1 * var(--fontxsmall));
 }
@@ -649,7 +644,7 @@ body{
     width: 66%;
 }
 .singledetails .job-details img{
-    min-width: 18%;
+    min-width: 20%;
     /* width: 17.5vh; */
 }
 .singledetails .job-details section{
@@ -794,6 +789,127 @@ body{
 .added-to-favorites img{
     width: 23%;
 }
+.task-completed{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(30, 23, 35, 0.9);
+}
+.task-completed article{
+    background-color: white;
+    padding: calc(1.5 * var(--padlarger)) calc(2.5 * var(--padlarger));
+    border-radius: var(--radius);
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap);
+    justify-content: center;
+}
+.task-completed article img{
+    width: 13vw;
+    margin: auto;
+}
+.task-completed article h1{
+    color: #3CA5E9;
+    text-align: center;
+    font-size: calc(1.5 * var(--fontlarge));
+    font-weight: 700;
+    letter-spacing: 3.42px;
+}
+.task-completed article p{
+    color: #575756;
+    text-align: center;
+    text-overflow: ellipsis;
+    font-size: var(--fontxsmall);
+    font-weight: 500;
+    line-height: 104.5%;
+    letter-spacing: 0.35px;
+}
+.task-completed article h4{
+    color: #7038E5;
+    text-shadow: 0px 0px 60px rgba(255, 255, 255, 0.15);
+    font-size: var(--fontsmall);
+    font-weight: 700;
+    letter-spacing: 0.48px;
+}
+.task-completed section div{
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr;
+    align-items: flex-end;
+    border-radius: 20px;
+    background: rgba(180, 144, 255, 0.25);
+    padding: var(--padlittle) var(--padlarge);
+    margin-top: var(--padlittle);
+}
+.task-completed section div p{
+    color: #3D235B;
+    text-shadow: 0px 0px 60px rgba(255, 255, 255, 0.15);
+    font-size: var(--fontsmall);
+    font-weight: 500;
+    letter-spacing: 0.9px;
+}
+.task-completed button{
+    padding: var(--padmedium) var(--padlarger);
+    border-radius: calc(2 * var(--radius));
+    background: #7C3EFF;
+    color: white;
+    width: max-content;
+    margin: auto;
+    font-size: var(--fontmedium);
+    font-weight: 700;
+    letter-spacing: 1.9px;
+    cursor: pointer;
+}
+.task-completed button:hover{
+    background: #A276FF;
+}
+.donut-chart{
+    flex: 1;
+    position: relative;
+}
+.donut-chart .pie{
+    height: 100%;
+    aspect-ratio: 1/1;
+    margin: auto; 
+    border-radius: 50%;
+}
+.donut-chart section{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 60%;
+    aspect-ratio: 1/1;
+    background-color: white;
+    border-radius: 50%;
+}
+.legend{
+    background: none !important;
+    position: absolute;
+    text-align: center;
+    color: #3D235B;
+    text-shadow: 0px 0px 60px rgba(255, 255, 255, 0.15);
+    font-size: var(--fontsmall);
+    font-weight: 500;
+    letter-spacing: 0.18px;
+    width: max-content;
+    padding: 0 !important;
+    gap: 0 !important;
+}
+.incomplete{
+    right: 0;
+}
+.ontime, .late{
+    bottom: 0;
+}
+.late{
+    right: 10%;
+}
+
 @media screen and (max-width: 1500px) {
     .container{
         width: 80vw;
