--- a/style.css
+++ b/style.css
@@ -84,6 +84,9 @@ button{
     pointer-events: none;
     transform: translateX(10vw);
 }
+.hidden{
+    display: none;
+}
 .hide-element{
     opacity: 0;
     position: absolute !important;
@@ -900,7 +903,7 @@ body{
     position: relative;
 }
 .donut-chart .pie{
-    height: 100%;
+    width: 35%;
     aspect-ratio: 1/1;
     margin: auto; 
     border-radius: 50%;
