--- a/style.css
+++ b/style.css
@@ -376,8 +376,8 @@ body{
 .favorite-jobs, .popular-jobs{
     display: flex;
     flex-direction: column;
-    gap: var(--gap);
-    height: 65vh;
+    gap:calc(0.7 * var(--gap));
+    height: 55vh;
     overflow-y: scroll;
     padding-right: 1vw;
     overflow-x: hidden;
@@ -546,10 +546,10 @@ body{
     width: 75%;
     display: flex;
     flex-direction: column;
-    gap: var(--gap);
+    gap: calc(0.7 * var(--gap));
     overflow-y: scroll;
     padding-right: 1vw;
-    max-height: 60vh;
+    max-height: 55vh;
     overflow-x: hidden;
 }
 .jobs-cont .jobfilter{
@@ -557,10 +557,8 @@ body{
     border-radius: var(--radius);
     display: flex;
     flex-direction: column;
-    gap: var(--gap);
+    gap: calc(0.7 * var(--gap));
     height: max-content;
-}
-.jobfilter{
     background-color: white;
     padding: var(--padlarger);
 }
@@ -607,7 +605,7 @@ body{
 .types, .skills{
     display: flex;
     flex-direction: column;
-    gap: calc(0.5 * var(--gap));
+    gap: calc(0.3 * var(--gap));
 }
 .jobfilter .checkboxes{
     width: max-content;
@@ -985,5 +983,8 @@ body{
 @media screen and (max-height: 700px){
     .favorite-jobs, .popular-jobs{
         height: 60vh;
+    }
+    .jobs-cont .alljobs{
+        max-height: 60vh;
     }
 }
